--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,17 +1,14 @@
 FROM centos:6.6
 
-RUN rpm --rebuilddb && \
-          yum -y --setopt=tsflags=nodocs update && \
-          yum --setopt=tsflags=nodocs -y install \
-		httpd-2.2.15-54.el6.centos \
-		mod_ssl-2.2.15-54.el6.centos \
-		php-5.3.3-48.el6_8 \
+RUN rpm --rebuilddb \
+	&& yum --setopt=tsflags=nodocs -y install \
+		httpd-2.2.15-59.el6.centos \
+		mod_ssl-2.2.15-59.el6.centos \
+		php-5.3.3 \
+		epel-release-6-8.noarch \
 		wget \
 		nfs-utils
-
-RUN  wget http://download.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm \
-		 && rpm -ivh epel-release-6-8.noarch.rpm
-
+		
 RUN yum --setopt=tsflags=nodocs -y install \
 		php-pecl-xdebug \
 		php-pecl-memcached \
@@ -27,7 +24,5 @@ RUN yum --setopt=tsflags=nodocs -y install \
 		&& yum clean all
 
 		
-		
 EXPOSE 80
 CMD ["/usr/sbin/apachectl","-D","FOREGROUND"]
-		
